src/ui/snapshots/cmdboard__ui__tests__confirm_popup.snap
---
source: src/ui/mod.rs
expression: "screen_text(&app, 100, 30)"
---
 CmdBoard · Dashboard                                                       aucune session en cours 
╭ Catégories ──────╮╭ Applications · nom ─────────────────────────────────╮╭ Détails ──────────────╮
│> Jeux (1)        ││  Nom                            Niv  XP       Temps ││Steam                  │
│  Dev (1)         ││> Steam                          1    ░░░░░░░░ 0m    ││Niveau 1               │
│  Outils (3)      ││                                                     ││       0/100 XP        │
│                  ││                                                     ││                       │
│                  ││                                                     ││Temps total : 0m       │
│                  ││                                                     ││Dernière : jamais      │
│                  ││                                                     ││Récompenses : 🏆  0     │
│                  ││                                                     ││                       │
│                  ││                                                     ││Cible : steam://open/ma│
│                  ││                                                     ││Process : steam.exe    │
│                  ││                                                     ││                       │
│                 ╭ Confirmer ───────────────────────────────────────────────────╮                 │
│                 │Supprimer Steam ?                                             │                 │
│                 │                                                              │                 │
│                 │Entrée/o oui   Esc/n non                                      │                 │
│                 ╰──────────────────────────────────────────────────────────────╯                 │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
╰──────────────────╯╰─────────────────────────────────────────────────────╯╰───────────────────────╯
╭ Profil ──────────────────────────────────────────────────────────────────────────────────────────╮
│Niv 1                            0/100 XP                            │ Streak 0j │ XP du jour : +0│
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Activité ────────────────────────────────────────────────────────────────────────────────────────╮
│Aucune activité pour le moment                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
                                                                                                    
 Entrée/o confirmer   Esc/n annuler
