src/ui/snapshots/cmdboard__ui__tests__dashboard.snap
---
source: src/ui/mod.rs
expression: "screen_text(&app, 100, 30)"
---
 CmdBoard · Dashboard                                                       aucune session en cours 
╭ Catégories ──────╮╭ Applications · nom ─────────────────────────────────╮╭ Détails ──────────────╮
│  ★ Récents (0)   ││  Nom                            Niv  XP       Temps ││Steam                  │
│> Jeux (1)        ││>   Steam                        1    ░░░░░░░░ 0m    ││Niveau 1               │
│  Dev (1)         ││                                                     ││       0/100 XP        │
│  Outils (3)      ││                                                     ││                       │
│                  ││                                                     ││Temps total : 0m       │
│                  ││                                                     ││Dernière : jamais      │
│                  ││                                                     ││Récompenses : 🏆  0     │
│                  ││                                                     ││                       │
│                  ││                                                     ││Cible : steam://open/ma│
│                  ││                                                     ││Process : steam.exe    │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
│                  ││                                                     ││                       │
╰──────────────────╯╰─────────────────────────────────────────────────────╯╰───────────────────────╯
╭ Profil ──────────────────────────────────────────────────────────────────────────────────────────╮
│Niv 1                            0/100 XP                            │ Streak 0j │ XP du jour : +0│
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Activité ────────────────────────────────────────────────────────────────────────────────────────╮
│Aucune activité pour le moment                                                                    │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
                                                                                                    
 j/k naviguer   Tab panneau   Entrée lancer   a/e/m/d ajout/modif/dépl./suppr.   / chercher   : comm
